# AgentXGreenAgent

./: .env  .gitignore  Dockerfile  Dockerfile.purple  README.md  README_backup.md  generate_compose.py  main.py  plan.md  pyproject.toml  requirements.txt  scenario.toml  user_task_detailed_instructions.json
.github/workflows/: ci.yml
ASB_Agent/: Dockerfile.green  README.md  main.py  results_asb_2.json  results_asb_5.json  results_dh_5.json
ASB_Agent/src/: __init__.py  logger.py  run_assessment.py
ASB_Agent/src/green_agent/: evaluator_agent.py  scorer.py  test_case_loader.py  tool_simulator.py
ASB_Agent/src/purple_agent/: __init__.py
AgentXGreenAgent-main/: README.md
InjectAgent/: Dockerfile.purple  README.md  pyproject.toml
InjectAgent/src/: config.py  run_assessment.py
InjectAgent/src/green_agent/: evaluator_agent.py  scorer.py  test_case_loader.py  tool_simulator.py
InjectAgent/src/purple_agent/: agent.py  server.py
_legacy_ASB_Agent/: count_tasks.py  results_all_1.json  results_all_10.json  results_all_2.json  results_asb_1.json  scenario.toml
_legacy_ASB_Agent/data_repo/data/: attacker_instruction_detailed_steps.json
_legacy_ASB_Agent/src/: config.py  run_assessment.py
_legacy_ASB_Agent/src/green_agent/: server.py  (+3 more)
data/: jurist.db  sample_dataset.json
src/: agent_core.py  config.py  db.py  ingest.py  models.py  prompts.py  purple_agent_baseline.py  run_assessment.py  scoring.py  server.py  test_interaction.py
src/green_agent/: __init__.py  evaluator_agent.py  memory_store.py  scorer.py  server.py
src/purple_agent/: agent.py  server.py
