[project]
name = "injecagent-green"
version = "0.1.0"
description = "InjecAgent Green Agent for AgentX AgentBeats Phase 1 - Evaluates agents for indirect prompt injection vulnerabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LangChain for agentic workflows
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    # Web server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Data handling
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    # HTTP client
    "httpx>=0.28.0",
    # Utilities
    "rich>=13.0.0",
    "jsonlines>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
